add client module

--- a/client/src/core/core.html
+++ b/client/src/core/core.html
@@ -1,11 +1,10 @@
-<div layout="row" layout-fill layout-align="center start">
-    <md-content class="md-padding">
-        <h1>{{$ctrl.message}}</h1>
-        <p ng-repeat="(prop, value) in $ctrl.METADATA">
-            {{prop}}:
-            {{value}}
-        </p>
-    </md-content>
-</div>
-<md-icon md-svg-src="file">file</md-icon>
+<h1 translate="core.core"></h1>
+<h1 translate="core.hello"></h1>
+
+
 <users></users>
+
+<md-button ng-click="$ctrl.goToClient()">
+    <md-icon md-svg-src="navigation"></md-icon>
+    go to client device
+</md-button>
