--- a/client/src/core/core.html
+++ b/client/src/core/core.html
@@ -1,10 +1,15 @@
 <h1 translate="core.core"></h1>
 <h1 translate="core.hello"></h1>
-
-
 <users></users>
 
 <md-button ng-click="$ctrl.goToClient()">
     <md-icon md-svg-src="navigation"></md-icon>
     go to client device
+</md-button>
+
+<md-button ng-click="$ctrl.switchLanguage('zh')">
+    Chinese
+</md-button>
+<md-button ng-click="$ctrl.switchLanguage('en')">
+    English
 </md-button>
