seeder rewritten by john

--- a/client/src/core/core.html
+++ b/client/src/core/core.html
@@ -1,5 +1,8 @@
 <h1 translate="core.core"></h1>
 <h1 translate="core.hello"></h1>
+
+<h3 translate="users.yo"></h3>
+
 <users></users>
 
 <md-button ng-click="$ctrl.goToClient()">
