customers form basic UI

--- a/client/src/client/customers/customers.html
+++ b/client/src/client/customers/customers.html
@@ -1,5 +1,10 @@
-<div ui-view>
-    <h1>customers</h1>
-    <keypad type="tel" limit="10"
-        on-update="$ctrl.test(inputNumbers)"></keypad>
+<div ui-view layout-fill>
+    
+    <div layout-fill layout="column" layout-align="center center">
+        <div flex></div>
+        <h1 class="md-headline">Let's Check-in with Your Phone Number</h1>
+        <keypad type="tel" limit="10"
+            on-update="$ctrl.test(inputNumbers)"></keypad>
+        <div flex></div>
+    </div>
 </div>
