prepare to build up front end routes

--- a/client/src/client/customers/customersForm/customersForm.html
+++ b/client/src/client/customers/customersForm/customersForm.html
@@ -10,7 +10,7 @@
     <div class="md-subhead" style="padding-top:0px  ">Tap to change avatar</div>
 </div>
 <md-progress-linear md-mode="determinate" value="{{$ctrl.progressValue}}"></md-progress-linear>
-
+{{$ctrl.numberTest}}
 <div flex="4"></div>
 <md-content>
     <form name="$ctrl.customers_form" novalidate>
