move customers into core

--- a/client/src/core/customers/customers.html
+++ b/client/src/core/customers/customers.html
@@ -1,6 +1,6 @@
-<div ui-view layout-fill>
+<div ui-view layout="column" flex>
     
-    <div layout-fill layout="column" layout-align="center center">
+    <div layout="column" flex layout-align="center center">
         <div flex></div>
         <h1 class="md-headline">Let's Check-in with Your Phone Number</h1>
         <keypad type="tel" limit="10"
