--- a/client/src/core/customers/customersForm/customersForm.html
+++ b/client/src/core/customers/customersForm/customersForm.html
@@ -1,4 +1,4 @@
-<div layout-fill layout="column">
+<div layout="column" flex="80">
 
 <div layout="row" layout-align="center" layout-padding layout-wrap style="background-color:beige;">
     <!--<h1 class="md-display-1">Human</h1>-->
@@ -11,8 +11,8 @@
 </div>
 <md-progress-linear md-mode="determinate" value="{{$ctrl.progressValue}}"></md-progress-linear>
 {{$ctrl.numberTest}}
-<div flex="4"></div>
-<md-content>
+<!--<div flex="5"></div>-->
+<md-content layout="column" flex>
     <form name="$ctrl.customers_form" novalidate>
         <section layout="row" ng-show="$ctrl.currentFormState=='name'">
             <div flex="20"></div>
@@ -115,5 +115,7 @@
     </div>
     
 </md-content>
+<!--<div flex="5"></div>-->
+<!--<div flex="5"></div>-->
 
 </div>
