--- a/client/src/core/listItems/listItemsWaivers/listItemsWaivers.html
+++ b/client/src/core/listItems/listItemsWaivers/listItemsWaivers.html
@@ -60,26 +60,24 @@
                         <textarea ng-model="item.zhDescription" md-maxlength="150" rows="3" md-select-on-focus></textarea>
                     </md-input-container>
                 </div>
-                <div layout="column" flex="20" layout-align="start start">
-                    <div layout="row" layout-align="start center" flex>
-                        <md-switch ng-model="item.isActivated" aria-label="isActivated" ng-true-value="true" ng-false-value="false">
+                <div layout="column" flex="10" layout-align="start center">
+                    <md-switch ng-model="item.isActivated" aria-label="isActivated" ng-true-value="true" ng-false-value="false">
+                        <md-tooltip>
+                            <span>
+                                Activate
+                            </span>
+                        </md-tooltip>
+                    </md-switch>
+                    <div flex></div>
+                    <md-button ng-click="item.isDeleted = true" class="md-icon-button md-warn md-raised md-hue-2" aria-label="delete">
+                        <md-icon md-svg-src="delete">
                             <md-tooltip>
                                 <span>
-                                    Activate
+                                    Delete
                                 </span>
                             </md-tooltip>
                         </md-switch>
-                        <div flex></div>
-                        <md-button ng-click="item.isDeleted = true" class="md-icon-button md-warn md-raised md-hue-2" aria-label="delete">
-                            <md-icon md-svg-src="delete">
-                                <md-tooltip>
-                                    <span>
-                                        Delete
-                                    </span>
-                                </md-tooltip>
-                            </md-switch>
-                        </md-button>
-                    </div>
+                    </md-button>
                 </div>
             </form>
         </md-content>
