--- a/client/src/core/customers/customersForm/customersForm.html
+++ b/client/src/core/customers/customersForm/customersForm.html
@@ -238,12 +238,12 @@
         <md-button flex layout-fill class="md-raised md-primary" aria-label="next"
             style="min-width:initial"
             ng-click="$ctrl.navigateForm('next')">
-            <md-icon md-svg-src="chevron-right"></md-icon>
+            <md-icon md-svg-src="chevron-right" class="s48"></md-icon>
         </md-button>
         <md-button flex layout-fill aria-label="back"
             style="min-width:initial"
             ng-click="$ctrl.navigateForm('back')">
-            <md-icon flex md-svg-src="chevron-left"></md-icon>
+            <md-icon flex md-svg-src="chevron-left" class="s48"></md-icon>
         </md-button>
     </div>
 </div>
