user login and socket io

--- a/client/src/client/client.html
+++ b/client/src/client/client.html
@@ -1,1 +1,11 @@
-<h1 translate="client.welcome"></h1>
+<md-toolbar>
+    <div class="" layout="row" layout-align="start center">
+        <h3>customer device</h3>
+        <div class="" flex></div>
+        <user-auth-logout style="icon"></user-auth-logout>
+    </div>
+</div>
+</md-toolbar>
+<div ui-view>
+    client content
+</div>
