--- a/client/src/core/core.html
+++ b/client/src/core/core.html
@@ -13,6 +13,7 @@
 
         <md-icon md-svg-src="translate" ng-click="$ctrl.toggleLanguage()"></md-icon>
         <!-- <div flex></div> -->
+        <user-auth-logout style="icon"></user-auth-logout>
     </div>
     <md-content ui-view layout="column" flex>
         core content goes here
