remove preview card for inhouse orders

--- a/client/src/core/inhouseOrders/inhouseOrders.html
+++ b/client/src/core/inhouseOrders/inhouseOrders.html
@@ -19,8 +19,8 @@
         <md-button ng-click="$ctrl.submit()">submit</md-button>
         <md-button ng-click="$ctrl.reset()">reset</md-button>
     </div>
-
-    <md-card>
+    <canvas id="inhouse-orders-canvas" ></canvas>
+    <!-- <md-card>
         <div>
             order
         </div>
@@ -35,6 +35,5 @@
                 </span>
             </div>
         </div>
-    </md-card>
-    <canvas id="inhouse-orders-canvas" ></canvas>
+    </md-card> -->
 </md-content>
