petsForm: try to finalize layout

--- a/client/src/core/customers/customersForm/customersForm.html
+++ b/client/src/core/customers/customersForm/customersForm.html
@@ -243,7 +243,7 @@
         <md-button flex layout-fill aria-label="back"
             style="min-width:initial"
             ng-click="$ctrl.navigateForm('back')">
-            <md-icon flex md-svg-src="chevron-left" class="s48"></md-icon>
+            <md-icon md-svg-src="chevron-left" class="s48"></md-icon>
         </md-button>
     </div>
 </div>
