--- a/client/src/userAuth/userAuthLogout/userAuthLogout.html
+++ b/client/src/userAuth/userAuthLogout/userAuthLogout.html
@@ -11,5 +11,5 @@
     ng-show="$ctrl.style=='icon'"
     md-svg-src="logout-variant"
     ng-disabled="!$ctrl.isLogged"
-    ng-click=$ctrl.logout()>
+    ng-click=$ctrl.logoutConfirm()>
 </md-icon>
