--- a/client/src/core/settings/settings.html
+++ b/client/src/core/settings/settings.html
@@ -1,5 +1,4 @@
-
-<md-content layout="column" flex>
+<md-content layout="column" flex class="md-padding">
     <h1>settings</h1>
     <div class="" layout="column">
         <h3>company information</h3>
