--- a/client/src/core/pets/petsList/petsList.html
+++ b/client/src/core/pets/petsList/petsList.html
@@ -1,2 +1,107 @@
-<h1>pets list</h1>
-{{$ctrl.pets}}
+<div class="" id="pets-list" layout="row" flex>
+    <md-content layout="column" flex="50">
+        <table flex st-table="displayedCollection" st-safe-src="$ctrl.pets" class="table table-striped">
+            <thead>
+                <tr>
+                    <th colspan="4">
+                        <md-icon md-svg-src="magnify"></md-icon>
+                        <md-input-container class="md-block">
+                            <input st-search="" class="form-control" placeholder="" type="text"/>
+                        </md-input-container>
+                    </th>
+                </tr>
+
+                <tr>
+                    <th st-sort="image">Image</th>
+                    <th st-sort="name">Name</th>
+                    <th st-sort="info">Info</th>
+                    <th st-sort="owner">Owner</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="row in displayedCollection" ng-click="$ctrl.selected = row">
+                    <td>{{row.image}}</td>
+                    <td>{{row.name}}</td>
+                    <td>{{row.breeds}} {{row.color}}</td>
+                    <td>{{row.owner[0].firstname}} {{row.owner[0].lastname}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </md-content>
+    <div layout="column" flex class="pet-detail">
+        <div layout="row" flex="none">
+            <div flex></div>
+            <md-button ng-show="$ctrl.selected" ng-click="$ctrl.update($ctrl.selected)" class="md-raised md-primary">Update Pet</md-button>
+        </div>
+        <md-content layout="column" flex ng-show="$ctrl.selected" class="md-padding">
+            <md-subheader class="md-no-sticky">
+                Information
+            </md-subheader>
+            <div layout="column" flex="none" class="md-padding">
+                <md-input-container class="md-block">
+                    <label>Name</label>
+                    <input type="text" ng-model="$ctrl.selected.name"/>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Breed</label>
+                    <input type="text" ng-model="$ctrl.selected.breeds"/>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Color</label>
+                    <input type="text" ng-model="$ctrl.selected.phone"/>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Weight</label>
+                    <input type="text" ng-model="$ctrl.selected.weight"/>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Gender</label>
+                    <input type="text" ng-model="$ctrl.selected.gender"/>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Species</label>
+                    <input type="text" ng-model="$ctrl.selected.specices"/>
+                </md-input-container>
+                <md-input-container class="md-block">
+                    <label>Birthday</label>
+                    <input type="text" ng-model="$ctrl.selected.birthday"/>
+                </md-input-container>
+            </div>
+            <md-subheader class="md-no-sticky">
+                vaccinations
+            </md-subheader>
+            <div layout="column" flex="none" class="md-padding">
+                <!-- <md-input-container class="md-block">
+                    <label>Street</label>
+                    <input type="text" ng-model="$ctrl.selected.address.street"/>
+                </md-input-container> -->
+            </div>
+            <md-subheader class="md-no-sticky">
+                previousHistory
+            </md-subheader>
+            <div layout="column" flex="none" class="md-padding" ng-repeat="contact in $ctrl.selected.emergencyContact">
+                <!-- <md-input-container class="md-block">
+                    <label>name</label>
+                    <input type="text" ng-model="contact.name"/>
+                </md-input-container> -->
+            </div>
+            <md-subheader class="md-no-sticky">
+                specialConditions
+            </md-subheader>
+            <div layout="column" flex="none" class="md-padding" ng-repeat="contact in $ctrl.selected.emergencyContact">
+                <!-- <md-input-container class="md-block">
+                    <label>name</label>
+                    <input type="text" ng-model="contact.name"/>
+                </md-input-container> -->
+            </div>
+
+            <md-divider></md-divider>
+            <div layout="column" flex="none" class="md-padding">
+                <!-- <label>Last Login At</label>
+                {{$ctrl.selected.lastLoginAt | date:'EEEE h:mma @ MMMM d, y'}}
+                <label>Created At</label> -->
+                {{$ctrl.selected.updatedAt | date:'EEEE h:mma @ MMMM d, y'}}
+            </div>
+        </md-content>
+    </div>
+</div>
