--- a/client/src/core/customers/customersList/customersList.html
+++ b/client/src/core/customers/customersList/customersList.html
@@ -31,7 +31,7 @@
     <div layout="column" flex class="customer-detail">
         <div layout="row" flex="none">
             <div flex></div>
-            <md-button ng-show="$ctrl.selected" ng-click="$ctrl.update($ctrl.selected)" class="md-raised md-primary">Update user</md-button>
+            <md-button ng-show="$ctrl.selected" ng-click="$ctrl.update($ctrl.selected)" class="md-raised md-primary">Update Customer</md-button>
         </div>
         <md-content layout="column" flex ng-show="$ctrl.selected" class="md-padding">
             <md-subheader class="md-no-sticky">
