move components to client module

--- a/client/src/client/customersCheckIn/customersCheckIn.html
+++ b/client/src/client/customersCheckIn/customersCheckIn.html
@@ -2,6 +2,6 @@
     <div flex></div>
     <h1 class="md-headline">Let's Check-in with Your Phone Number</h1>
     <keypad type="tel" limit="10"
-        on-update="$ctrl.test(inputNumbers)"></keypad>
+        on-update="$ctrl.checkIn(inputNumbers)"></keypad>
     <div flex></div>
 </div>
