--- a/client/src/client/client.html
+++ b/client/src/client/client.html
@@ -1,10 +1,7 @@
-<md-toolbar>
-    <div class="" layout="row" layout-align="start center">
-        <h3>customer device</h3>
-        <div class="" flex></div>
-        <user-auth-logout style="icon"></user-auth-logout>
-    </div>
-</div>
+<md-toolbar class="md-padding header" layout="row" layout-align="start center">
+    <h5 ng-click="$ctrl.$state.go('client.customersCheckIn')">customer device</h5>
+    <div class="" flex></div>
+    <user-auth-logout style="icon"></user-auth-logout>
 </md-toolbar>
 <div ui-view>
     client content
