--- a/client/src/client/dashboard/dashboard.html
+++ b/client/src/client/dashboard/dashboard.html
@@ -1,1 +1,24 @@
-dashboard
+<div class="" layout="row" layout-align="center center">
+    <h2>Welcome Back~ {{$ctrl.customer.firstname}}</h2>
+    <md-button class="md-warn md-raised" ng-click="$ctrl.$state.go('client.customersCheckIn')">Logout</md-button>
+</div>
+<div class="main" layout="column" flex layout-align="center center">
+    <div class="" layout="column" layout-align="start center" ng-show="!$ctrl.isScheduled()">
+        <!-- <h3>you dont have any appointment</h3> -->
+        <md-button ng-click="$ctrl.makeAppointment()">Make appointment now</md-button>
+    </div>
+    <div class="" layout="column" layout-align="start center" ng-show="$ctrl.isScheduled()">
+        <md-button ng-click="$ctrl.checkIn()">Check In My Appointment</md-button>
+    </div>
+</div>
+
+<div class="footer md-padding" layout="row" layout-align="center center">
+    <md-button ng-click="$ctrl.updateMyInfo()">Update My Info</md-button>
+    <md-button ng-repeat="pet in $ctrl.customer.pets" ng-click="$ctrl.updateMyPet(pet._id)">
+        Update My {{pet.name}}
+    </md-button>
+    <md-button ng-click="$ctrl.addPet()">Add a Pet</md-button>
+</div>
+
+<!-- <md-divider></md-divider>
+{{$ctrl.customer}} -->
