add quick inhouseorders and fix printer

--- a/client/src/core/core.html
+++ b/client/src/core/core.html
@@ -1,9 +1,10 @@
-<div layout="row" flex id="core">
+<div layout="row" flex id="core" layout-fill>
     <div layout="column" layout-align="start center" class="sidenav">
         <md-icon ng-show="!toggleIcons" md-svg-src="calendar-plus" ng-click="$ctrl.newOrder()"></md-icon>
         <md-icon ng-show="!toggleIcons" md-svg-src="book-open-page-variant" ng-click="$ctrl.go('core.orders.list')"></md-icon>
         <md-icon ng-show="!toggleIcons" md-svg-src="account-multiple" ng-click="$ctrl.go('core.customers.list')"></md-icon>
         <md-icon ng-show="!toggleIcons" md-svg-src="paw" ng-click="$ctrl.go('core.pets.list')"></md-icon>
+        <md-icon ng-show="!toggleIcons" md-svg-src="format-list-bulleted" ng-click="$ctrl.go('core.inhouseOrders')"></md-icon>
         <!-- <div flex></div> -->
         <md-icon ng-show="toggleIcons" md-svg-src="format-list-bulleted-type" ng-click="$ctrl.go('core.listItems')"></md-icon>
         <md-icon ng-show="toggleIcons" md-svg-src="settings" ng-click="$ctrl.go('core.settings')"></md-icon>
