--- a/client/src/core/inhouseOrders/inhouseOrders.html
+++ b/client/src/core/inhouseOrders/inhouseOrders.html
@@ -1,25 +1,44 @@
-<md-content layout="column" id="inhouse-orders" layout-align="start center">
-    <!-- <h1>Inhouse Orders</h1>
-    <md-divider></md-divider> -->
-    <div class="padding-box" ng-repeat="type in $ctrl.list" layout="column" layout-align="start center">
-        <h3>
-            {{type.zhName}} {{type.name}}
-        </h3>
-        <div layout="row">
-            <md-button
-                ng-repeat="item in type.subItems"
-                ng-click="$ctrl.assignToOrder(type.name, item)"
-                ng-class="{
-                    'md-accent': $ctrl.isInOrder(type.name, item),
-                    'md-raised': $ctrl.isInOrder(type.name, item)
-                }">
-                {{item.zhName}} {{item.name}}
-            </md-button>
-        </div>
-    </div>
-    <div layout="row">
-        <md-button ng-click="$ctrl.submit()" class="md-primary md-raised">submit</md-button>
+<div layout="column" id="inhouse-orders" layout-align="start center">
+    <div layout="row" class="header" layout-align="center center">
         <md-button ng-click="$ctrl.reset()" class="md-warn">reset</md-button>
+        <div class="flex" layout="row" layout-align="center center">
+            {{$ctrl.message}}
+        </div>
+        <md-button ng-click="$ctrl.submit()" class="md-primary md-raised">Print</md-button>
     </div>
-    <canvas id="inhouse-orders-canvas" class="hide"></canvas>
-</md-content>
+    <md-content layout="column" flex layout-fill>
+        <div class="padding-box" ng-show="type.type=='time'" ng-repeat="type in $ctrl.list | orderBy: 'type'" layout="column" layout-align="start center" flex="none">
+            <h3>
+                {{type.zhName}} {{type.name}}
+            </h3>
+            <div layout="row">
+                <md-button
+                    ng-repeat="item in type.subItems"
+                    ng-click="$ctrl.assignToOrder(type.name, item)"
+                    ng-class="{
+                        'md-accent': $ctrl.isInOrder(type.name, item),
+                        'md-raised': $ctrl.isInOrder(type.name, item)
+                    }">
+                    {{item.zhName}} {{item.name}}
+                </md-button>
+            </div>
+        </div>
+        <div class="padding-box" ng-show="type.type!='time'" ng-repeat="type in $ctrl.list | orderBy: 'type'" layout="column" layout-align="start center" flex="none">
+            <h3>
+                {{type.zhName}} {{type.name}}
+            </h3>
+            <div layout="row">
+                <md-button
+                    ng-repeat="item in type.subItems"
+                    ng-click="$ctrl.assignToOrder(type.name, item)"
+                    ng-class="{
+                        'md-accent': $ctrl.isInOrder(type.name, item),
+                        'md-raised': $ctrl.isInOrder(type.name, item)
+                    }">
+                    {{item.zhName}} {{item.name}}
+                </md-button>
+            </div>
+        </div>
+    </md-content>
+</div>
+<canvas id="inhouse-orders-canvas" class="hide"></canvas>
